# FDL

./: .cproject  .gitignore  CMakeLists.txt  Makefile
include/: Diff.h  Function.h  LDO.h  Stencil.h  StencilBase.cpp  StencilBase.h  StencilProd.cpp  StencilProd.h  StencilSubtraction.cpp  StencilSubtraction.h  StencilSum.cpp  StencilSum.h  function.h  grid.h  solve.h  typedef.h
src/: .gitignore  CMakeLists.txt  Makefile  main  main.bck  main.cpp  u.m  u.txt
unit_tests/: CMakeLists.txt  CTestTestfile.cmake
unit_tests/Testing/Temporary/: CTestCostData.txt
unit_tests/laplace/: CMakeLists.txt  CTestTestfile.cmake  laplace  laplace.cpp  u.txt  uRef.txt
unit_tests/laplace/Testing/Temporary/: CTestCostData.txt
unit_tests/poisson/: CMakeLists.txt  CTestTestfile.cmake  poisson  poisson.cpp  u.m
